--- a/style.css
+++ b/style.css
@@ -78,6 +78,15 @@ main .img-plan{
     border-radius: 10px;
 }
 
+#clock {
+	font-size: 48px;
+	width: 900px;
+	margin: auto;
+	text-align: center;
+	border: 2px solid rgb(0, 0, 0);
+	border-radius: 20px;
+}
+
 footer{
     padding: 2px;
     background-color:#3d8171;
